Use live referendum status on homepage
